--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section class="portfolio-section">
-        <h1 class="portfolio-title">Our portfolio</h1>
+        <h1 class="visually-hidden">Our portfolio</h1>
         <ul class="portfolio-btn-list">
           <li class="portfolio-btn-item">
             <button type="button" class="portfolio-btn">All</button>
