--- a/index.html
+++ b/index.html
@@ -54,32 +54,32 @@
         <button type="button" class="hero-section-btn">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <h2 class="visually-hidden">Our advantages</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Strategy</h3>
+            <p class="advantages-item-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Punctuality</h3>
+            <p class="advantages-item-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Diligence</h3>
+            <p class="advantages-item-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Technologies</h3>
+            <p class="advantages-item-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -87,9 +87,9 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+        <h2 class="title">What are we doing</h2>
+        <ul class="product-list">
+          <li class="product-item">
             <img
               src="./images/img_1.jpg"
               alt="img_1"
@@ -97,7 +97,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./images/img_2.jpg"
               alt="img_2"
@@ -105,7 +105,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./images/img_3.jpg"
               alt="img_3"
@@ -116,47 +116,47 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/mark_guerrero_foto.jpg"
               alt="mark_guerrero_foto"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="team-role">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/tom_ford_foto.jpg"
               alt="tom_ford_foto"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="team-role">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/camila_garcia_foto.jpg"
               alt="camila_garcia_foto"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="team-role">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/daniel_wilson_foto.jpg"
               alt="daniel_wilson_foto"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="team-role">UI Designer</p>
           </li>
         </ul>
       </section>
