--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team-section">
         <h2 class="title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
