--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Studio</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header class="header">
