--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li class="product-item">
             <img
               src="./images/img_1.jpg"
-              alt="img_1"
+              alt="soft for pc"
               width="360"
               height="300"
             />
@@ -100,7 +100,7 @@
           <li class="product-item">
             <img
               src="./images/img_2.jpg"
-              alt="img_2"
+              alt="mobile app"
               width="360"
               height="300"
             />
@@ -108,7 +108,7 @@
           <li class="product-item">
             <img
               src="./images/img_3.jpg"
-              alt="img_3"
+              alt="mobile app"
               width="360"
               height="300"
             />
@@ -121,7 +121,7 @@
           <li class="team-item">
             <img
               src="./images/mark_guerrero_foto.jpg"
-              alt="mark_guerrero_foto"
+              alt="mark guerrero photo"
               width="264"
               height="260"
             />
@@ -131,7 +131,7 @@
           <li class="team-item">
             <img
               src="./images/tom_ford_foto.jpg"
-              alt="tom_ford_foto"
+              alt="tom ford photo"
               width="264"
               height="260"
             />
@@ -141,7 +141,7 @@
           <li class="team-item">
             <img
               src="./images/camila_garcia_foto.jpg"
-              alt="camila_garcia_foto"
+              alt="camila garcia photo"
               width="264"
               height="260"
             />
@@ -151,7 +151,7 @@
           <li class="team-item">
             <img
               src="./images/daniel_wilson_foto.jpg"
-              alt="daniel_wilson_foto"
+              alt="daniel wilson photo"
               width="264"
               height="260"
             />
