--- a/portfolio.html
+++ b/portfolio.html
@@ -70,91 +70,91 @@
           <li class="portfolio-item">
             <img
               src="./images/banking-app-photo.jpg"
-              alt="banking-app-photo"
+              alt="banking app photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Banking App Interface Concept</h3>
+            <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
             <p class="portfolio-list-description">App</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/cashless-payment-photo.jpg"
-              alt="cashless-payment-photo"
+              alt="cashless payment photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <h2 class="portfolio-list-title">Cashless Payment</h2>
             <p class="portfolio-list-description">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/meditaion-app-photo.jpg"
-              alt="meditaion-app-photo"
+              alt="meditaion app photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Meditaion App</h3>
+            <h2 class="portfolio-list-title">Meditaion App</h2>
             <p class="portfolio-list-description">App</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/taxi-service-photo.jpg"
-              alt="taxi-service-photo"
+              alt="taxi service photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <h2 class="portfolio-list-title">Taxi Service</h2>
             <p class="portfolio-list-description">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/screen-illustrations-photo.jpg"
-              alt="screen-illustrations-photo"
+              alt="screen illustrations photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <h2 class="portfolio-list-title">Screen Illustrations</h2>
             <p class="portfolio-list-description">Design</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/online-courses-photo.jpg"
-              alt="online-courses-photo"
+              alt="online courses photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Online Courses</h3>
+            <h2 class="portfolio-list-title">Online Courses</h2>
             <p class="portfolio-list-description">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/instagram-stories-concept-photo.jpg"
-              alt="instagram-stories-concept-photo"
+              alt="instagram stories concept photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Instagram Stories Concept</h3>
+            <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
             <p class="portfolio-list-description">Design</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/organic-food-photo.jpg"
-              alt="organic-food-photo"
+              alt="organic food photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Organic Food</h3>
+            <h2 class="portfolio-list-title">Organic Food</h2>
             <p class="portfolio-list-description">Web Site</p>
           </li>
           <li class="portfolio-item">
             <img
               src="./images/fresh-coffee-photo.jpg"
-              alt="fresh-coffee-photo"
+              alt="fresh coffee photo"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-title">Fresh Coffee</h3>
+            <h2 class="portfolio-list-title">Fresh Coffee</h2>
             <p class="portfolio-list-description">Web Site</p>
           </li>
         </ul>
